--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "server/index.js",
   "dependencies": {
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "http": "0.0.1-security",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
+    "react-browser-router": "^2.1.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
@@ -16,7 +19,9 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0"
