--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "A toolf or customizing the content and sources of your news feed.",
   "main": "server/index.js",
   "dependencies": {
+    "@chakra-ui/react": "^1.7.2",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
+    "framer-motion": "^4.1.17",
     "http": "0.0.1-security",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
