--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-browser-router": "^2.1.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
