--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "framer-motion": "^4.1.17",
     "http": "0.0.1-security",
+    "mongoose": "^6.0.14",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
