--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "A toolf or customizing the content and sources of your news feed.",
   "main": "server/index.js",
   "dependencies": {
-    "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "axios": "^0.24.0",
@@ -18,7 +17,8 @@
     "react-bootstrap": "^2.0.3",
     "react-browser-router": "^2.1.2",
     "react-dom": "^17.0.2",
-    "react-modal": "^3.14.4"
+    "react-modal": "^3.14.4",
+    "react-spinners": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
